[package]
name = "fourier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kzg = { path = "../rust-kzg/kzg" }
rust-kzg-arkworks = { path = "../rust-kzg/arkworks" }

# rpc
tokio = { version = "1.37", features = ["macros", "full"] }
tracing = "0.1.40"
tracing-test = "0.2.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = "0.12.2"
thiserror = "1.0.58"
hex = "0.4.3"
hyper-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.2.0", features = ["full"] }
http-body-util = "0.1.1"
tracing-subscriber = "0.3.18"
